--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ."
+    "start": "nodemon"
   },
   "dependencies": {
     "express": "^4.18.1",
@@ -16,6 +16,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "nodemon": "^2.0.19"
   }
 }
