--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "lint": "npm standard",
+    "lintfix": "npm standard --fix"
   },
   "dependencies": {
     "express": "^4.18.1",
@@ -17,6 +19,7 @@
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "standard": "^17.0.0"
   }
 }
