--- a/config/config.json
+++ b/config/config.json
@@ -5,10 +5,10 @@
   },
   "test": {
     "dialect": "sqlite",
-    "storage": "./database.sqlite3"
+    "storage": "./database.test.sqlite3"
   },
   "production": {
     "dialect": "sqlite",
-    "storage": "./database.sqlite3"
+    "storage": "./database.production.sqlite3"
   }
 }
