--- a/package.json
+++ b/package.json
@@ -7,7 +7,26 @@
   "scripts": {
     "start": "nodemon index.js",
     "lint": "./node_modules/.bin/standard .",
-    "lintfix": "./node_modules/.bin/standard . --fix"
+    "lintfix": "./node_modules/.bin/standard . --fix",
+    "test": "NODE_ENV=test jest --coverage --verbose --forceExit",
+    "pretest": "NODE_ENV=test npm run migrate:reset",
+    "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
+    "migrate": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
+    "posttest": "rm ./database.test.sqlite3"
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ],
+    "globals": [
+      "describe",
+      "test",
+      "expect",
+      "beforeAll",
+      "afterAll",
+      "beforeEach",
+      "afterEach"
+    ]
   },
   "dependencies": {
     "express": "^4.18.1",
@@ -22,6 +41,8 @@
   "devDependencies": {
     "sequelize-cli": "^6.4.1",
     "nodemon": "^2.0.19",
-    "standard": "^17.0.0"
+    "standard": "^17.0.0",
+    "jest": "^28.1.2",
+    "supertest": "^6.2.4"
   }
 }
