--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "dependencies": {
+    "fs-extra":"^10.1.0",
     "express": "^4.18.1",
     "cors": "^2.8.5",
     "body-parser": "^1.20.0",
